--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,24 @@
-.full-section{
+.full-section {
 	width:100%;
 	background-color:#eee;
 }
-.content-section{
+
+.content-section {
 	
 }
-.card{
+
+.card {
 	border:solid #777 1px;
+	box-shadow:0 0 6px;
+	transition:box-shadow 0.2s,background-color 0.2s;
+}
+
+.card:active {
+	box-shadow:0 0 2px;
+	background-color:#eee;
+}
+
+.article-img {
+	background-color:#eee;
+	width:100%;
 }
