--- a/css/layout.css
+++ b/css/layout.css
@@ -11,7 +11,7 @@
 	border:solid #777 1px;
 	box-shadow:0 0 6px;
 	border-radius:4px;
-	transition:box-shadow 0.1s,background-color 0.1s,border-radius 0.1s;
+	/*transition:box-shadow 0.1s,background-color 0.1s,border-radius 0.1s;*/
 }
 
 .card:active {
