--- a/css/layout.css
+++ b/css/layout.css
@@ -21,7 +21,8 @@ body {
 	border:solid #777 1px;
 	box-shadow:0 0 6px;
 	border-radius:4px;
-	transition:box-shadow 0.1s/*,background-color 0.1s,border-radius 0.1s;*/
+	transition:box-shadow 0.1s/*,background-color 0.1s,border-radius 0.1s*/;
+	margin:8px 0;
 }
 
 .card:active {
