--- a/css/layout.css
+++ b/css/layout.css
@@ -71,3 +71,23 @@ body {
 	background:#444;
 	color:#fff;
 }
+
+#more {
+	margin:8px;
+	border:solid #00a0e9 1px;
+	background:#fff;
+	box-shadow:0 0 6px;
+	transition:box-shadow 0.1s;
+	height:40px;
+	border-radius:4px;
+	font-size: 16px;
+	height: 36px;
+	letter-spacing: .5px;
+	line-height: 36px;
+	text-align:center;
+}
+
+#more:active {
+	background:#eee;
+	box-shadow:0 0 2px;
+}
